package test_message;
option java_package = "test_message";


message TestMessageInfo
{
  required string str = 1;
  required bool flag = 2;
  required int32 num = 3;
  optional TestSubMessageInfo subMessageInfo = 4;
}

message TestSubMessageInfo
{
  required string sub_str = 1;
  required bool sub_flag = 2;
  required int32 sub_num = 3;
}

message XXXTestMessageInfo2
{
  required string str2 = 1;
  required bool flag2 = 2;
  required int32 num2 = 3;
  optional XXXTestSubMessageInfo2 subMessageInfo2 = 4;
}


message XXXTestSubMessageInfo2
{
  required string sub_str2 = 1;
  required bool sub_flag2 = 2;
  required int32 sub_num2 = 3;
}


